[tool.poetry]
name = "spotify-musivault"
version = "0.1.0"
description = ""
authors = ["Will Romano <will.j.romano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.1"
spotipy = "^2.23.0"
python-dotenv = "^1.0.1"
authlib = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
